Minimum parser type (notice, warning, error) can be set for ErrorStrip.  TaskNotices are always displayed. TaskTagParser's notices can not be derived by their type (TaskNotice). Fixed a bug in Gutter - IconRowHeader's color didn't change with runtime LaF change.